# nonogram-solver

./: .gitignore  README.md  pyproject.toml
examples/: bench.json  bench.txt  cobbled.json  curious.json  curious.txt  flat_out.json  flat_out.txt  lemur.json  small.json  small.txt  tired.json  tired.txt  wind_up.json
src/nonogram/: __init__.py  core.py  exceptions.py  main.py  parser.py  printer.py  ui.py  ui_solver.py
src/nonogram/rules/: __init__.py  edge_rules.py  enumeration_rules.py  overlap_rules.py  simple_rules.py  split_rules.py  utils.py
src/nonogram/solver/: engine.py  line_solver.py  observer.py  split_line_solver.py  ui_solver.py
src/pixelpuzzle/: cli.py  exceptions.py  utils.py
src/pixelpuzzle/solvers/: __init__.py  basic_solver.py  utils.py
src/test/: test_solvers_utils.py
src/test/solvers/: test_utils.py
tst/nonogram/: test_core.py  utils.py
tst/nonogram/rules/: test_edge_rules.py  test_enumeration_rules.py  test_overlap_rules.py  test_simple_rules.py  test_split_rules.py  test_utils.py
tst/nonogram/solver/: test_solver_completeness.py
