[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelpuzzle"
version = "0.1.0"
description = "Solver for nonograms/pixel puzzles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commandline>=0.1.3.dev0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "rich>=14.2.0",
]

[project.scripts]
pixel = "pixelpuzzle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelpuzzle"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=advent --cov-report=term-missing"
